package interfaces;

public interface Modifiable {


    public void modify(int modifyValue);
}
